# baton

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  protocol.md
examples/: mock_provider.rs
prompts/: candidate.md  interviewer.md
scripts/: external-agent-proof.sh  quickstart.sh
src/: cli.rs  config.rs  converse.rs  error.rs  events.rs  lib.rs  log.rs  mailbox.rs  main.rs  message.rs  model.rs  participant.rs  registry.rs  roles.rs  transport.rs
src/transport/: claude.rs  http.rs  mod.rs
tests/: integration_test.rs
